--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "node scripts/create-database.js",
-    "pretest": "node scripts/create-database.js test",
+    "migrate": "node scripts/migrate.js",
+    "prestart": "node scripts/create-database.js && npm run migrate",
+    "pretest": "node scripts/create-database.js test && npm run migrate test",
     "start": "nodemon -r dotenv/config index.js",
     "test": "mocha tests/**/*.js --exit --recursive --timeout 60000 --file ./tests/test-setup.js",
     "posttest": "node scripts/drop-database.js"
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "postgres-migrations": "^5.3.0"
   }
 }
